--- a/Class-03_24th_Sept_Demo_001.ipynb
+++ b/Class-03_24th_Sept_Demo_001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgF3KFyuJhxW/rOg/5Lj10",
+      "authorship_tag": "ABX9TyNOZgaykEUjHr/qGbYUVs22",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1462,6 +1462,8 @@
         "a = 22\n",
         "print(type(a))\n",
         "a=22.2\n",
+        "print(type(a))\n",
+        "a=\"22.2\"\n",
         "print(type(a))"
       ],
       "metadata": {
@@ -1469,16 +1471,601 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lbd-BUZygZIi",
-        "outputId": "c9c4a6df-112e-4e37-b860-4564f67080de"
+        "outputId": "e091b281-7a32-4e3d-fd99-16dc5b430ac4"
       },
-      "execution_count": 65,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'int'>\n",
-            "<class 'float'>\n"
+            "<class 'float'>\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZZaVSa8hhAz6",
+        "outputId": "2fbe933f-92e6-41c1-8ed4-9c5ab74d6501"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sunny\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Strong Typing"
+      ],
+      "metadata": {
+        "id": "-JPMDGMAsq2a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"Day \" +1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "id": "VZ_4U6hAspMA",
+        "outputId": "b67bcb72-ec73-4e3d-b9e8-d0835990ca67"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-504ac56cd61e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"Day \"\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"Day\" +\"1\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "iqoVomKrtDeD",
+        "outputId": "471e7ebc-db04-4c5c-8410-843d6509fd59"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Day1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"22\" + \"22\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ELFDsMFKtPdT",
+        "outputId": "472621d7-6bb5-4cdd-e8bc-2e50e9c755c0"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2222'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "22 + 22"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZorguPZgtuPe",
+        "outputId": "5eb30bf4-31ef-455a-ccce-beb33c413292"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "44"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"22\" + 22"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "id": "pptDnrlTt1Zp",
+        "outputId": "83eb0574-5b57-46d3-b136-3fb82d0a22f4"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-2e2b19d89d15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"22\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m22\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'22' + \"22\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "llmSTmcNt5Wc",
+        "outputId": "d5d1a9ed-e685-46a1-a191-dcc99534fe5a"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2222'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"Pavan \" + \"Patil\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "qYeIA3cJtYxN",
+        "outputId": "454fc661-9c70-4150-c5e4-bfc803f5bc18"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Pavan Patil'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "22.2 + 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yQQfylk_t_OJ",
+        "outputId": "1ff56f82-881b-4063-fcf9-5e13c0d234e1"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23.2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1 # int\n",
+        "b = 1.2 # Float\n",
+        "c = \"Pavan\" #String\n",
+        "f = 1 + 2j # Complex"
+      ],
+      "metadata": {
+        "id": "latmKuBetdIt"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hi welcome to class of python language\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ViVJTFynue-6",
+        "outputId": "7499d3c7-e262-41fd-f3c1-0e93e26d928c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi welcome to class of python language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hi welcome to class of Java language\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d33KDw-IuwfY",
+        "outputId": "fff08631-98fe-4fe1-8d9a-9d2d477e5ecc"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi welcome to class of Java language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "language = \"JS\"\n",
+        "print(\"Hi welcome to class of \" + language + \" language\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6fksvMZu1kO",
+        "outputId": "c970079d-73de-4575-c0a5-faf0d9a1a0cf"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi welcome to class of JS language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# f -> formated strings\n",
+        "language = \"JS\"\n",
+        "print(f\"Hi welcome to class of {language} language\") # Current std approach used"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sTjv6x3ivG96",
+        "outputId": "d9621151-d341-4f06-8339-6b530e4893c0"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi welcome to class of JS language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "language = \"JS\"\n",
+        "print(\"Hi welcome to class of {language} language\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZkoTbuQzvni4",
+        "outputId": "c9b141c8-e171-4b2d-d0fe-a7c5035e15ff"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi welcome to class of {language} language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "language = \"JS\"\n",
+        "print(\"Hi welcome to class of {} language\".format(language))# old way"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ViZUebCvte3",
+        "outputId": "3abf808e-613d-4076-ffb6-85320ec3ba94"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi welcome to class of JS language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# f -> formated strings\n",
+        "language = \"python\"\n",
+        "num= \"first\"\n",
+        "print(f\"Today is the {num} class of {language} language\") # Current std approach used\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_zVB0k1iwQuZ",
+        "outputId": "6facdd4f-c4fd-46b0-aa58-9956b77ec938"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Today is the first class of python language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = \"1st\"\n",
+        "language = \"JS\"\n",
+        "print(\"Today is the {} class of {} language\".format(num, language))# old way"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TRQ6JCV7w2Dw",
+        "outputId": "fa77287d-42f4-480c-d62d-0e9887b6a312"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Today is the 1st class of JS language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = \"1st\"\n",
+        "language = \"JS\"\n",
+        "print(\"Today is the \" + num +  \" class of \"  + language + \" language\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JmepovrA5syJ",
+        "outputId": "cbca53b3-fe07-4f66-86ef-74d712b4f2c8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Today is the 1st class of JS language\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=22\n",
+        "b=34\n",
+        "c=a+b\n",
+        "print(f\"The result of sum of two nums a: {a} and b: {b} is = {c}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f8LBUv_S6pi9",
+        "outputId": "460ff5ef-95ec-438d-8f69-2a4a503f17fd"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The result of sum of two nums a: 22 and b: 34 is = 56\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Boolean data type\n",
+        "True False"
+      ],
+      "metadata": {
+        "id": "MrCZzczn8SOp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "one = True\n",
+        "two = False\n",
+        "\n",
+        "print (type(one))\n",
+        "print(type(two))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7s65QuEd74GS",
+        "outputId": "8c317cf6-932f-4d6e-9a5d-2a7aa1f03185"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'bool'>\n",
+            "<class 'bool'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_starts_at = 1600\n",
+        "you_came_at = 1600\n",
+        "you_understood_all_concepts = you_came_at < class_starts_at\n",
+        "\n",
+        "print(f\"You understood everything?: {you_understood_all_concepts}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OWZ8hgrX8qTx",
+        "outputId": "77f6548c-0e85-4037-9064-9e84c747a2e8"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You understood everything?: False\n"
           ]
         }
       ]
@@ -1487,7 +2074,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZZaVSa8hhAz6"
+        "id": "H7wDBfod9TKO"
       },
       "execution_count": null,
       "outputs": []
