--- a/Class-03_24th_Sept_Demo_001.ipynb
+++ b/Class-03_24th_Sept_Demo_001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOZgaykEUjHr/qGbYUVs22",
+      "authorship_tag": "ABX9TyPTYh7STTN6UIq4i+wWxqoF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2046,9 +2046,9 @@
     {
       "cell_type": "code",
       "source": [
-        "class_starts_at = 1600\n",
+        "class_starts_at = 1500\n",
         "you_came_at = 1600\n",
-        "you_understood_all_concepts = you_came_at < class_starts_at\n",
+        "you_understood_all_concepts = you_came_at >= class_starts_at\n",
         "\n",
         "print(f\"You understood everything?: {you_understood_all_concepts}\")"
       ],
@@ -2057,16 +2057,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OWZ8hgrX8qTx",
-        "outputId": "77f6548c-0e85-4037-9064-9e84c747a2e8"
+        "outputId": "0ef5c4be-c358-4956-e29c-6f5ee7166b58"
       },
-      "execution_count": 25,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "You understood everything?: False\n"
+            "You understood everything?: True\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "is_raining = True\n",
+        "umberella_available = True\n",
+        "go_to_college = is_raining == umberella_available\n",
+        "go_to_college"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H7wDBfod9TKO",
+        "outputId": "f1673f54-0b6f-4b08-8510-375e4b98e09f"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     },
@@ -2074,7 +2103,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "H7wDBfod9TKO"
+        "id": "CqJSyHA_AoXt"
       },
       "execution_count": null,
       "outputs": []
