--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBSInxHqWdM8sSKZfKmxB0",
+      "authorship_tag": "ABX9TyPWCFvJPby8NY0/m1evcO59",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -693,6 +693,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# *I am unaable to print 22\\3, can you please suggest how to print this.* \n",
+        "Whereas I am able to print 22/3."
+      ],
+      "metadata": {
+        "id": "9nR3Gjc48K-p"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\"\"\"\n",
@@ -706,9 +716,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Jk8OLpjf9_jz",
-        "outputId": "db421d02-c02d-4a16-da06-fde3f7c191bf"
+        "outputId": "8db147da-afcf-4614-9adc-e6bf2e3d0f85"
       },
-      "execution_count": 36,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,6 +727,37 @@
             "\n",
             "  Hi I'm Sunny\n",
             "  My address is \"22\u0003\"\n",
+            "  I earn 20$ daily\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\"\"\n",
+        "  Hi I'm Sunny\n",
+        "  My address is \"22/3\"\n",
+        "  I earn 20$ daily\n",
+        "\"\"\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hVmdOInV703Z",
+        "outputId": "7217a5c8-cde2-4988-a530-a6e5fee1bf2d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "  Hi I'm Sunny\n",
+            "  My address is \"22/3\"\n",
             "  I earn 20$ daily\n",
             "\n"
           ]
